--- a/src/main/resources/templates/viaje.html
+++ b/src/main/resources/templates/viaje.html
@@ -360,7 +360,7 @@
 		
 		$(document).on("click","#btn-reporte",function(){
 			let cod=$("#idRuta").val();
-			window.open("http://localhost:8090/viaje/reporte?codigo="+cod);
+			window.open("https://app-yerbateros.azurewebsites.net/viaje/reporte?codigo="+cod);
 			})
 		
 	</script>		
