--- a/src/main/resources/templates/venta-pasaje.html
+++ b/src/main/resources/templates/venta-pasaje.html
@@ -463,7 +463,7 @@
 			$("#tableDetalle tbody").empty();
 			let boton="<button type='button' class='form-control btn btn-danger btn-eliminar'>X</button>";
 			$.get("grabar?fecha="+fecha+"&viaje="+codViaje+"&total="+total,function(response){
-				window.location.href = "http://localhost:8090/pagina-principal/finalizar";
+				window.location.href = "https://app-yerbateros.azurewebsites.net/pagina-principal/finalizar";
 				
 			})
 		})
