--- a/src/main/resources/templates/detalleventa.html
+++ b/src/main/resources/templates/detalleventa.html
@@ -315,7 +315,7 @@
 		})
 		
 		$(document).on("click","#btn-reporte",function(){
-			window.open("http://localhost:8090/detalleventa/reporte");
+			window.open("https://app-yerbateros.azurewebsites.net/detalleventa/reporte");
 			})
 		
 		
